--- a/css/style.css
+++ b/css/style.css
@@ -63,11 +63,11 @@ sec-contents {
   float: right; 
 }
 #img-table {
-  width: 350px;
+  width:100%; 
 }
 table {
   width: 800px;
-  float: center;
+  float: left;
   padding: 0 26px 0 0; 
 }
 
