--- a/css/style.css
+++ b/css/style.css
@@ -20,6 +20,7 @@ h1 {
   font-weight: bold; 
   letter-spacing: 2px; 
   border-bottom: 1px solid #999; 
+  line-height: 36px;
 }
 h2 { 
   font-size: 20px; 
